Fix: Remove vercel-build script for Node.js deployment

--- a/BYT_SOFTWARE/package.json
+++ b/BYT_SOFTWARE/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "byt-software",
+  "name": "byt-software", 
   "version": "1.0.0",
   "description": "BYT Software - Sistema de Cotizaciones",
   "main": "server.js",
@@ -14,7 +14,7 @@
   "engines": {
     "node": "18.x"
   },
-  "keywords": ["byt", "cotizaciones", "muebles", "furniture", "quotes"],
+  "keywords": ["byt", "cotizaciones", "muebles"],
   "author": "Bosque y Tierra",
   "license": "MIT"
 }
