--- a/BYT_SOFTWARE/vercel.json
+++ b/BYT_SOFTWARE/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "/index.js"
     }
   ],
   "functions": {
-    "server.js": {
+    "index.js": {
       "runtime": "nodejs18.x"
     }
   },
