--- a/BYT_SOFTWARE/vercel.json
+++ b/BYT_SOFTWARE/vercel.json
@@ -4,9 +4,25 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "src/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/src/(.*)",
+      "dest": "/src/$1"
+    },
+    {
+      "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico|html))",
+      "dest": "/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.js"
