Fix comment punctuation in inject-header.yml

--- a/.github/workflows/inject-header.yml
+++ b/.github/workflows/inject-header.yml
@@ -1,5 +1,5 @@
 # Workflow: inyecta el placeholder del header en los HTML del repo
-# Ejecutalo manualmente desde GitHub Actions -> Run workflow
+# Ejecutalo manualmente desde GitHub Actions -> Run workflow.
 name: Inject siteHeader into pages
 
 on:
